exports[`(.not).toHaveMisdirectedRequestStatus > using axios > .not.toHaveMisdirectedRequestStatus > fails when response have status code 421 1`] = `
<dim>expect(</intensity><red>received</color><dim>).not.toHaveMisdirectedRequestStatus()</intensity>

Expected status code to not be 421 received:
  <red>421</color>

------------
response is:
{
  "url": "http://127.0.0.1:54607/status",
  "status": 421,
  "headers": {
    "content-type": "application/json; charset=utf-8",
    "content-length": "2",
    "connection": "keep-alive"
  },
  "body": {}
}
`;

exports[`(.not).toHaveMisdirectedRequestStatus > using axios > .toHaveMisdirectedRequestStatus > fails when response have other status code 1`] = `
<dim>expect(</intensity><red>received</color><dim>).toHaveMisdirectedRequestStatus()</intensity>

Expected status code to be 421 received:
  <red>200</color>

------------
response is:
{
  "url": "http://127.0.0.1:54607/status",
  "status": 200,
  "headers": {
    "content-type": "application/json; charset=utf-8",
    "content-length": "2",
    "connection": "keep-alive"
  },
  "body": {}
}
`;

exports[`(.not).toHaveMisdirectedRequestStatus > using got > .not.toHaveMisdirectedRequestStatus > fails when response have status code 421 1`] = `
<dim>expect(</intensity><red>received</color><dim>).not.toHaveMisdirectedRequestStatus()</intensity>

Expected status code to not be 421 received:
  <red>421</color>

------------
response is:
{
  "url": "http://127.0.0.1:54607/status",
  "status": 421,
  "headers": {
    "content-type": "application/json; charset=utf-8",
    "content-length": "2",
    "connection": "keep-alive"
  },
  "body": "{}"
}
`;

exports[`(.not).toHaveMisdirectedRequestStatus > using got > .toHaveMisdirectedRequestStatus > fails when response have other status code 1`] = `
<dim>expect(</intensity><red>received</color><dim>).toHaveMisdirectedRequestStatus()</intensity>

Expected status code to be 421 received:
  <red>200</color>

------------
response is:
{
  "url": "http://127.0.0.1:54607/status",
  "status": 200,
  "headers": {
    "content-type": "application/json; charset=utf-8",
    "content-length": "2",
    "connection": "keep-alive"
  },
  "body": "{}"
}
`;
